# rdm-turismodigital

./: .lovable-mem-nodo-cero.md  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
infra/systemd/: ollama.service  rdm-digital-api.service
scripts/deploy/: canary-deploy.sh  canary-postdeploy.sh
src/: App.tsx  index.css  main.tsx
src/app/guards/: RoleGuard.tsx
src/app/pages/: CommandCenter.tsx  Module.tsx
src/app/shell/: AppShell.tsx  Breadcrumbs.tsx  EnterpriseSidebar.tsx  ErrorBoundary.tsx  TopCommandBar.tsx
src/components/rdm/: architect.tsx  checkout-button.tsx  citemesh.tsx  closing-cta.tsx  evidence.tsx  federations.tsx  footer.tsx  geopolitics.tsx  hero.tsx  isabella.tsx  kernel.tsx  layers.tsx  live-status.tsx  (+8 more)
src/hooks/: useSupabaseQuery.ts
src/lib/: ai.ts  github.ts  ledger.ts  pagination.ts  payments.ts  products.ts  stripe.ts  tourism-data.ts  types.ts
src/pages/: Auth.tsx  ComercioRegistro.tsx  Dashboard.tsx  Home.tsx  Identidad.tsx  Repositorio.tsx  SimplePage.tsx  Territorio.tsx  Turismo.tsx
src/stores/: economy.ts  index.ts  isabella.ts  network.ts  tamv-store.ts
src/types/: eoct.ts  tamv.ts
supabase/migrations/: 202605080001_lovable_federated_kernel.sql  20260510095007_e2878d97-6285-4f3b-b2d9-db7bff3c9704.sql  20260510095850_a0f0477e-455c-4933-a75d-a848409b0766.sql  20260512080845_110fe96e-4027-403f-98c8-f6d495c1bf4c.sql
tamv-agent/: Cargo.toml  README.md  config.example.toml
tamv-agent/src/: config.rs  main.rs  protocol.rs  security.rs  state.rs  transport.rs
(+21 files in other folders)
